# exert-os

./: readme.md  x86.md  x86_64.md
fledgeos/: readme.md
fledgeos/fosdemo/: readme.md
fledgeos/fosdemo/src/: main.rs  vga.rs
fledgeos/kosdemo/src/: main.rs
rustdemo/: readme.md
rustdemo/fosdemo/: Cargo.toml  readme.md
rustdemo/fosdemo/src/: main.rs  vga.rs
rustdemo/kosdemo/: Cargo.toml  readme.md  x86_64.json
rustdemo/kosdemo/.cargo/: config
rustdemo/kosdemo/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  uart.rs  vga.rs
rustdemo/kosdemo/tests/: basic_boot.rs  should_panic.rs  should_panic_2.rs  stack_overflow.rs
