[package]
name = "kosdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.4.5"
x86_64 = "0.14.10"
spin = "0.9.4"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300 # 秒

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"
